examples/123/dstrategies-back-route-offline.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dstrategies-back-offline
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: dstrategies-back-offline
